// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"flexDirection":"column","rowGap":18,"columnGap":18}}>
      <__TamaguiNativeView style={{"flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","width":44,"pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiNativeView style={{"flex":1,"flexDirection":"column","justifyContent":"center","alignItems":"center","rowGap":46,"columnGap":46,"paddingTop":18,"paddingRight":18,"paddingBottom":18,"paddingLeft":18,"backgroundColor":"hsla(0, 0%, 8%, 1)"}}     >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"flexDirection":"row","rowGap":7,"columnGap":7}}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"flexDirection":"column","rowGap":18,"columnGap":18}}>
        <__TamaguiNativeText style={{"letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textTransform":"none","fontFamily":"InterBold","textAlign":"center","color":"hsla(0, 0%, 100%, 1)"}} >
          Welcome to Tamagui.
        </__TamaguiNativeText>
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 67%, 1)","textAlign":"center"}} >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>
          This screen uses the same code on Next.js and React Native.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiNativeView>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={{"flexDirection":"row","rowGap":7,"columnGap":7}}>
            <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>Made by</__TamaguiNativeText>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;
const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `"._fd-705616716{flex-direction:column}._rg-138590524{row-gap:var(--c-space-4)}._cg-1486234039{column-gap:var(--c-space-4)}._fd-69771487{flex-direction:row}._w-1922012707{width:100%}._ai-1818832327{align-items:center}._rg-138590524{row-gap:var(--c-space-4)}._cg-1486234039{column-gap:var(--c-space-4)}._fd-69771487{flex-direction:row}._w-1922012707{width:100%}._ai-1818832327{align-items:center}._rg-138590524{row-gap:var(--c-space-4)}._cg-1486234039{column-gap:var(--c-space-4)}._z-10{z-index:10;}._fd-705616716{flex-direction:column}._r-0px{right:0px;}._t-0px{top:0px;}._b-0px{bottom:0px;}._fd-705616716{flex-direction:column}._p-479368562{position:absolute}._ai-1818832327{align-items:center}._jc-1779629571{justify-content:center}._w-1986647453{width:var(--c-size-4)}._pe-2143478976{pointer-events:none}._z-10{z-index:10;}._fd-705616716{flex-direction:column}._grow-1{flex-grow:1;}._shrink-1{flex-shrink:1;}._fb-0px{flex-basis:0px;}._fd-705616716{flex-direction:column}._jc-1779629571{justify-content:center}._ai-1818832327{align-items:center}._rg-138590648{row-gap:var(--c-space-8)}._cg-1486234163{column-gap:var(--c-space-8)}._pt-737474647{padding-top:var(--c-space-4)}._pr-1837658660{padding-right:var(--c-space-4)}._pb-1275329248{padding-bottom:var(--c-space-4)}._pl-281835450{padding-left:var(--c-space-4)}._bc-1272928377{background-color:var(--background)}._fd-69771487{flex-direction:row}._p-1632149189{position:absolute}@media (min-width: 640px) {._p-1632149189{position:relative}}._w-1922012707{width:100%}._t-315174416{top:var(--c-space-6)}@media (min-width: 640px) {._t-315174416{top:0px}}._rg-138590586{row-gap:var(--c-space-6)}._cg-1486234101{column-gap:var(--c-space-6)}._jc-1779629571{justify-content:center}._fw-1669021077{flex-wrap:wrap}._fd-69771487{flex-direction:row}._rg-138590462{row-gap:var(--c-space-2)}._cg-1486233977{column-gap:var(--c-space-2)}._fd-705616716{flex-direction:column}._rg-138590524{row-gap:var(--c-space-4)}._cg-1486234039{column-gap:var(--c-space-4)}._mt-0px{margin-top:0px;}._mr-0px{margin-right:0px;}._mb-0px{margin-bottom:0px;}._ml-0px{margin-left:0px;}._us-774919159{user-select:auto}._ws-850364919{white-space:normal}._tt-1780939873{text-transform:var(--f-transform-10)}._ff-427956157{font-family:var(--f-family)}._fw-182018766{font-weight:var(--f-weight-10)}._ls-779227446{letter-spacing:var(--f-letterSpacing-10)}._fs-98858029{font-size:var(--f-size-10)}._lh-1494979092{line-height:var(--f-lineHeight-10)}._ta-870847610{text-align:center}._c-921632471{color:var(--color12)}._us-774919159{user-select:auto}._ws-850364919{white-space:normal}._ff-427956157{font-family:var(--f-family)}._fw-19059536{font-weight:var(--f-weight-4)}._ls-975714678{letter-spacing:var(--f-letterSpacing-4)}._fs-657383983{font-size:var(--f-size-4)}._lh-1200862450{line-height:var(--f-lineHeight-4)}._c-921632409{color:var(--color10)}._ta-870847610{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._fb-0px{flex-basis:0px;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._ty-207145345{--t-y:-0.5px}:where(._t-2031343298){--t-x:0px;--t-y:0px}._t-2031343298{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-187312933{border-top-color:background-focus}._brc-1084792562{border-right-color:background-focus}._bbc-1099070874{border-bottom-color:background-focus}._blc-34212472{border-left-color:background-focus}._us-774919159{user-select:auto}._ws-850364919{white-space:normal}._ff-427956157{font-family:var(--f-family)}._fw-19059536{font-weight:var(--f-weight-4)}._ls-975714678{letter-spacing:var(--f-letterSpacing-4)}._fs-657383983{font-size:var(--f-size-4)}._lh-1200862450{line-height:var(--f-lineHeight-4)}._c-2049372838{color:var(--color)}._ta-870847610{text-align:center}._shrink-1{flex-shrink:1;}._btw-0px._btw-0px{border-top-width:0px;}._brw-0px._brw-0px{border-right-width:0px;}._borderBottomWidth-1px._borderBottomWidth-1px{border-bottom-width:1px;}._borderLeftWidth-0px._borderLeftWidth-0px{border-left-width:0px;}._grow-1{flex-grow:1;}._fb-0px{flex-basis:0px;}._height-0px{height:0px;}._maxH-0px{max-height:0px;}._bbs-solid._bbs-solid{border-bottom-style:solid;}._bts-solid._bts-solid{border-top-style:solid;}._bls-solid._bls-solid{border-left-style:solid;}._brs-solid._brs-solid{border-right-style:solid;}._ty-207145345{--t-y:-0.5px}:where(._t-2031343298){--t-x:0px;--t-y:0px}._t-2031343298{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-187312933{border-top-color:background-focus}._brc-1084792562{border-right-color:background-focus}._bbc-1099070874{border-bottom-color:background-focus}._blc-34212472{border-left-color:background-focus}._fd-69771487{flex-direction:row}._rg-138590462{row-gap:var(--c-space-2)}._cg-1486233977{column-gap:var(--c-space-2)}._us-774919159{user-select:auto}._ws-850364919{white-space:normal}._ff-427956157{font-family:var(--f-family)}._fw-19059536{font-weight:var(--f-weight-4)}._ls-975714678{letter-spacing:var(--f-letterSpacing-4)}._fs-657383983{font-size:var(--f-size-4)}._lh-1200862450{line-height:var(--f-lineHeight-4)}._c-2049372838{color:var(--color)}._ta-870847610{text-align:center}"`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _fd-705616716 _rg-138590524 _cg-1486234039">
      <div className="is_View _fd-69771487 _w-1922012707 _ai-1818832327 _rg-138590524 _cg-1486234039"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _fd-69771487 _w-1922012707 _ai-1818832327 _rg-138590524 _cg-1486234039"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _fd-705616716">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-705616716 _p-479368562 _ai-1818832327 _jc-1779629571 _w-1986647453 _pe-2143478976"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _fd-705616716">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _fb-0px _fd-705616716 _jc-1779629571 _ai-1818832327 _rg-138590648 _cg-1486234163 _pt-737474647 _pr-1837658660 _pb-1275329248 _pl-281835450 _bc-1272928377"     >
      <div
        className="is_View _fd-69771487 _p-1632149189 _w-1922012707 _t-315174416 _rg-138590586 _cg-1486234101 _jc-1779629571 _fw-1669021077"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _fd-69771487 _rg-138590462 _cg-1486233977">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _fd-705616716 _rg-138590524 _cg-1486234039">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-774919159 _ws-850364919 _tt-1780939873 _ff-427956157 _fw-182018766 _ls-779227446 _fs-98858029 _lh-1494979092 _ta-870847610 _c-921632471" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-921632409 _ta-870847610" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-0px _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _ty-207145345 _t-2031343298 _btc-187312933 _brc-1084792562 _bbc-1099070874 _blc-34212472" />
        <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-2049372838 _ta-870847610">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-0px _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _ty-207145345 _t-2031343298 _btc-187312933 _brc-1084792562 _bbc-1099070874 _blc-34212472" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _fd-69771487 _rg-138590462 _cg-1486233977">
            <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-2049372838 _ta-870847610">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={{"flexDirection":"column","rowGap":18,"columnGap":18}}>
      <__TamaguiNativeView style={{"flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={{"flexDirection":"row","width":"100%","alignItems":"center","rowGap":18,"columnGap":18}}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"flexDirection":"column"}}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={{"right":0,"top":0,"bottom":0,"flexDirection":"column","position":"absolute","alignItems":"center","justifyContent":"center","width":44,"pointerEvents":"none"}}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={{"zIndex":10,"flexDirection":"column"}}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiNativeView style={{"flex":1,"flexDirection":"column","justifyContent":"center","alignItems":"center","rowGap":46,"columnGap":46,"paddingTop":18,"paddingRight":18,"paddingBottom":18,"paddingLeft":18,"backgroundColor":"hsla(0, 0%, 8%, 1)"}}     >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={{"flexDirection":"row","rowGap":7,"columnGap":7}}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={{"flexDirection":"column","rowGap":18,"columnGap":18}}>
        <__TamaguiNativeText style={{"letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textTransform":"none","fontFamily":"InterBold","textAlign":"center","color":"hsla(0, 0%, 100%, 1)"}} >
          Welcome to Tamagui.
        </__TamaguiNativeText>
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 67%, 1)","textAlign":"center"}} >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>
          This screen uses the same code on Next.js and React Native.
        </__TamaguiNativeText>
        <__TamaguiNativeView style={{"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderTopColor":"background-focus","borderRightColor":"background-focus","borderBottomColor":"background-focus","borderLeftColor":"background-focus","transform":[{"translateY":-0.5}],"borderStyle":"solid"}} />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiNativeView>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={{"flexDirection":"row","rowGap":7,"columnGap":7}}>
            <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":27,"fontFamily":"Inter","color":"hsla(0, 0%, 100%, 1)","textAlign":"center"}}>Made by</__TamaguiNativeText>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

const __TamaguiNativeView = require('react-native').View;
const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _fd-705616716 _rg-138590524 _cg-1486234039">
      <div className="is_View _fd-69771487 _w-1922012707 _ai-1818832327 _rg-138590524 _cg-1486234039"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _fd-69771487 _w-1922012707 _ai-1818832327 _rg-138590524 _cg-1486234039"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _fd-705616716">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _r-0px _t-0px _b-0px _fd-705616716 _p-479368562 _ai-1818832327 _jc-1779629571 _w-1986647453 _pe-2143478976"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _z-10 _fd-705616716">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _grow-1 _shrink-1 _fb-0px _fd-705616716 _jc-1779629571 _ai-1818832327 _rg-138590648 _cg-1486234163 _pt-737474647 _pr-1837658660 _pb-1275329248 _pl-281835450 _bc-1272928377"     >
      <div
        className="is_View _fd-69771487 _p-1632149189 _w-1922012707 _t-315174416 _rg-138590586 _cg-1486234101 _jc-1779629571 _fw-1669021077"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _fd-69771487 _rg-138590462 _cg-1486233977">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _fd-705616716 _rg-138590524 _cg-1486234039">
        <h1 className="is_H1 is_Text font_heading _mt-0px _mr-0px _mb-0px _ml-0px _us-774919159 _ws-850364919 _tt-1780939873 _ff-427956157 _fw-182018766 _ls-779227446 _fs-98858029 _lh-1494979092 _ta-870847610 _c-921632471" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-921632409 _ta-870847610" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-0px _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _ty-207145345 _t-2031343298 _btc-187312933 _brc-1084792562 _bbc-1099070874 _blc-34212472" />
        <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-2049372838 _ta-870847610">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_Separator is_View _shrink-1 _btw-0px _brw-0px _borderBottomWidth-1px _borderLeftWidth-0px _grow-1 _fb-0px _height-0px _maxH-0px _bbs-solid _bts-solid _bls-solid _brs-solid _ty-207145345 _t-2031343298 _btc-187312933 _brc-1084792562 _bbc-1099070874 _blc-34212472" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _fd-69771487 _rg-138590462 _cg-1486233977">
            <p className="is_Paragraph is_Text font_body _us-774919159 _ws-850364919 _ff-427956157 _fw-19059536 _ls-975714678 _fs-657383983 _lh-1200862450 _c-2049372838 _ta-870847610">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;
